--- a/stylesheet.css
+++ b/stylesheet.css
@@ -104,7 +104,7 @@ body {
     position: relative;
     width: 100%;
     height: 100vh;
-    background-image: url('/imgs/heroBg.png');
+    background-image: url('./imgs/heroBg.png');
     background-size: cover;
     background-position: center center;
     display: flex;
