--- a/stylesheet.css
+++ b/stylesheet.css
@@ -335,9 +335,8 @@ body {
 }
 
 .newsCard:hover {
-    transform: translateY(-6px);
+    transform: translateY(-4px);
     box-shadow: 0 10px 25px rgba(255, 0, 0, 0.5);
-    cursor: pointer;
 }
 
 /* News Card Image Format */
@@ -381,6 +380,30 @@ body {
 .newsData {
     font-size: 12px;
     color: #909090;
+}
+
+/* News Button */
+.newsButton{
+    display: flex;
+    justify-content: center;
+    margin-top: 60px;
+}
+
+.seeMoreBtn {
+    background: linear-gradient(135deg, #b10d30, #7a0d23);
+    box-shadow: 0 6px 15px rgba(0, 0, 0, 0.6);
+    color: #ffffff;
+    padding: 12px 24px;
+    font-size: 24px;
+    border-radius: 8px;
+    text-decoration: none;
+    transition: all 0.3s ease;
+}
+
+.seeMoreBtn:hover {
+    transform: translateY(-4px);
+    box-shadow: 0 8px 22px rgba(255, 0, 0, 0.5);
+    color: #000000;
 }
 
 /* Footer Section */
