--- a/stylesheet.css
+++ b/stylesheet.css
@@ -475,3 +475,66 @@ footer {
     width: 100%;
     font-size: 16px;
 }
+
+/* The Game Page */
+.heroBanner {
+    position: relative;
+    width: 100%;
+    height: 220px;
+    background-color: #111;
+    overflow: hidden;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    text-align: center;
+    margin-bottom: 20px;
+}
+
+.heroImg {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    opacity: 0.4;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 1;
+}
+
+.gameTitle {
+    position: relative;
+    z-index: 2;
+    font-size: 64px;
+    color: #ff0000;
+    letter-spacing: 3px;
+    text-shadow: 2px 2px 8px rgba(0,0,0,0.7);
+}
+
+.gameVideo {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+  
+.videoContainer {
+    width: 40%;
+    aspect-ratio: 16 / 9;
+    position: relative;
+    border-radius: 16px;
+    overflow: hidden;
+    box-shadow: 0 12px 32px rgba(0, 0, 0, 0.5);
+    margin-bottom: 10px;
+    transition: all 0.3s ease;
+}
+  
+.videoContainer iframe {
+    width: 100%;
+    height: 100%;
+    border: none;
+}
+
+.videoContainer:hover { 
+    transform: scale(1.02);
+    box-shadow: 0 0 20px rgba(255, 0, 0, 0.4);
+    border-color: #f90000;
+  }
