--- a/stylesheet.css
+++ b/stylesheet.css
@@ -62,9 +62,14 @@ body {
     transition: all 0.3s ease;
 }
   
-.navBar-center a:hover {
+.navBar-center a:hover:not(.active) {
     color: #ff0000;
     transform: scale(1.2);
+}
+
+.navBar-center a.active{
+    color: #ff0000;
+    transform: scale(1.6);
 }
 
 /* Special Class for the "Buy Now" Button */
@@ -76,7 +81,7 @@ body {
 }
 
 /* Format for overriding the ".navBar-center a:hover" code from above.  */
-.navBar-center .buyNow:hover {
+.navBar-center .buyNow:hover:not(.active) {
     background-color: rgb(255, 0, 0);
     color: rgb(0, 0, 0);
     transform: scale(1.05);
@@ -245,7 +250,7 @@ body {
 .featuresContainer {
     display: flex;
     justify-content: center;
-    gap: 60px;
+    gap: 40px;
     margin-top: 80px;
     margin-bottom: 100px;
 }
@@ -253,16 +258,16 @@ body {
 /* Features Card Design */
 .featureCard {
     background: linear-gradient(135deg, #1b1b1b, #111);
-    padding: 16px;
     border-radius: 16px;
-    width: 300px;
+    overflow: hidden;
+    width: 30%;
     text-align: center;
-    box-shadow: 0 6px 15px rgba(0, 0, 0, 0.6);
+    box-shadow: 0 8px 16px rgba(0,0,0,0.6);
     transition: all 0.3s ease;
 }
 
 .featureCard:hover{
-    box-shadow: 0 12px 25px rgba(255, 0, 0, 0.3);
+    transform: translateY(-4px);
 }
 
 /* Feature Cards Image Format */
@@ -270,8 +275,6 @@ body {
     width: 100%;
     height: 220px;
     object-fit: cover;
-    border-radius: 8px;
-    margin-bottom: 16px;
 }
 
 .featureCard h2 {
@@ -283,7 +286,7 @@ body {
 .featureCard h2::after{
     content: "";
     display: block;
-    width: 120px;
+    width: 100px;
     height: 2px;
     background: #ff0000;
     margin: auto;
@@ -293,6 +296,7 @@ body {
 
 .featureCard p {
     font-size: 16px;
+    padding: 0 16px 16px 16px;
     color: #ffffff;
 }
 
@@ -324,16 +328,14 @@ body {
 .newsContainer {
     display: flex;
     justify-content: center;
-    gap: 60px;
-    flex-wrap: wrap;
+    gap: 40px;
 }
 
 /* News Card Design */
 .newsCard {
     background: linear-gradient(135deg, #1b1b1b, #111);
-    padding: 20px;
     border-radius: 16px;
-    width: 300px;
+    width: 30%;
     text-align: left;
     box-shadow: 0 6px 15px rgba(0, 0, 0, 0.6);
     transition: all 0.3s ease;
@@ -349,8 +351,6 @@ body {
     width: 100%;
     height: 220px;
     object-fit: cover;
-    border-radius: 12px;
-    margin-bottom: 20px;
 }
 
 .newsCard a {
@@ -358,8 +358,9 @@ body {
 }
 /* News Card Header */
 .newsCard h3 {
+    padding: 8px;
     font-size: 24px;
-    margin-bottom: 10px;
+    margin-bottom: 8px;
     color: #ff0000;
 }
 
@@ -378,11 +379,13 @@ body {
 .newsCard p {
     font-size: 16px;
     color: #ffffff;
+    padding: 8px;
     margin-bottom: 16px;
 }
 
 /* News Category and Dates */
 .newsData {
+    padding: 8px;
     font-size: 12px;
     color: #909090;
 }
@@ -527,7 +530,7 @@ footer {
     position: relative;
     border-radius: 16px;
     overflow: hidden;
-    box-shadow: 0 12px 32px rgba(0, 0, 0, 0.5);
+    box-shadow: 0 12px 32px rgba(0, 0, 0, 0.3);
     margin-bottom: 10px;
     transition: all 0.3s ease;
 }
@@ -578,7 +581,7 @@ footer {
   
 .featuresCard {
     background: linear-gradient(145deg, #1a1a1a, #0f0f0f);
-    border-radius: 16px;
+    border-radius: 8px;
     box-shadow: 0 8px 16px rgba(0,0,0,0.6);
     overflow: hidden;
     transition: all 0.3s ease;
@@ -599,6 +602,7 @@ footer {
     color: #ff0000;
     margin: 16px;
 }
+
 .featuresCard h3::after {
     content: "";
     display: block;
@@ -618,3 +622,31 @@ footer {
 .featuresCard:hover {
     box-shadow: 0 12px 25px rgba(255, 0, 0, 0.4);
 }
+
+.sectionText {
+    width: 60%;
+    margin: auto;
+    text-align: center;
+    font-size: 16px;
+    color: #ffffff;
+    padding: 0 20 0 20px;
+    margin-bottom: 10px;
+}
+
+.plannedFeatures{
+    margin-top: 80px;
+}
+
+.releaseSection{
+    margin-top: 100px;
+    margin-bottom: 200px;
+    position: relative;
+    background-image: url(./imgs/gameImgs/pzBackground.jpg);
+    overflow: hidden;
+    align-items: center;
+    justify-content: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center center;
+    height: 40vh;
+} 
