--- a/stylesheet.css
+++ b/stylesheet.css
@@ -631,22 +631,42 @@ footer {
     color: #ffffff;
     padding: 0 20 0 20px;
     margin-bottom: 10px;
+    line-height: 1.6;
 }
 
 .plannedFeatures{
     margin-top: 80px;
 }
 
-.releaseSection{
-    margin-top: 100px;
-    margin-bottom: 200px;
+.releaseSection {
     position: relative;
-    background-image: url(./imgs/gameImgs/pzBackground.jpg);
-    overflow: hidden;
+    margin-top: 100px;
+    margin-bottom: 180px;
+    height: 80vh;
+    display: flex;
     align-items: center;
     justify-content: center;
+    background-image: url('./imgs/gameImgs/pzBackground.jpg');
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center center;
-    height: 40vh;
-} 
+    overflow: hidden;
+}
+  
+.releaseOverlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.6);
+    z-index: 1;
+}
+  
+.releaseContent {
+    position: relative;
+    z-index: 2;
+    padding: 40px 20px;
+    text-align: center;
+    width: 100%;
+}
